--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=TestSecurity
+
+spring:
+    datasource:
+        url:jdbc:mysql://localhost:3306/security
+        username:root
+        password:perseus007!
+        driver-class-name:com.mysql.cj.jdbc.Driver
